# nix-store-gc-extra

./: .gitignore  cabal.project  default.nix  flake.nix  fourmolu.yaml  nix-store-gc-extra.cabal
src/: Main.hs
src/Nix/Store/GC/Extra/: Paths.hs
